# Axis

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRODUCT.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
.understand-anything/: .understandignore
src/axis_agent/: __init__.py  events.py  harness.py  loop.py  messages.py  tools.py  types.py
src/axis_agent/session/: __init__.py  entries.py  jsonl.py  memory.py  storage.py  tree.py
src/axis_ai/: __init__.py  config.py  events.py  fake.py  openai_compatible.py  provider.py  retry.py  smoke.py
src/axis_coding/: __init__.py  cli.py  commands.py  context.py  context_window.py  credentials.py  git_tools.py  lint_tools.py  memory_bank.py  paths.py  permissions.py  prompt_templates.py  provider_catalog.py  provider_config.py  provider_runtime.py  reload.py  resources.py  session.py  session_export.py  session_manager.py  skills.py  system_prompt.py  task_tool.py  thinking.py  tools.py  web_tools.py
src/axis_coding/mcp/: __init__.py  client.py  config.py  manager.py  tools.py
src/axis_coding/rendering/: __init__.py  base.py  json.py  plain.py  transcript.py
tests/: test_agent_contracts.py  test_agent_events.py  test_agent_harness.py  test_agent_loop.py  test_ai_provider.py  test_architecture.py  test_cli.py  test_coding_session.py  test_coding_tools.py  test_commands.py  test_context_window.py  test_credentials.py  test_deepseek_smoke.py  test_git_tools.py  test_lint_tools.py  test_markdown_resources.py  test_mcp.py  test_memory_bank.py  test_memory_session.py  test_openai_compatible.py  test_package_layout.py  test_paths_context.py  test_permissions.py  test_prompt_templates.py  test_provider_config.py  test_release_safety.py  test_rendering.py  test_session_entries.py  test_session_export.py  test_session_manager.py  test_session_replay.py  test_session_storage.py  test_skills.py  test_system_prompt.py  test_task_tool.py  test_thinking.py  test_tui_adapter.py  test_tui_app.py  test_tui_autocomplete.py  test_tui_config.py  (+9 more)
(+16 files in other folders)
