[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "axis"
version = "0.1.0"
description = "A personal Python coding agent built from first principles."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/axis_ai", "src/axis_agent", "src/axis_coding"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
strict = true
packages = ["axis_ai", "axis_agent", "axis_coding"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
