[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "axis"
version = "0.1.0"
description = "A personal Python coding agent built from first principles."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.27",
    "mcp>=1.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "sounddevice>=0.5.5",
    "textual>=1.0",
    "typer>=0.12",
    "websockets>=16.0",
]

[project.scripts]
axis = "axis_coding.cli:app"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/axis_ai", "src/axis_agent", "src/axis_coding"]

[tool.hatch.build.targets.sdist]
exclude = ["/.claude"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
strict = true
packages = ["axis_ai", "axis_agent", "axis_coding"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
